[gd_scene load_steps=2 format=3 uid="uid://clckrli8so1r7"]

[ext_resource type="Script" uid="uid://dydix4jpkiq5n" path="res://assets/scenes/ui/properties/properties_ui.gd" id="1_lwffo"]

[node name="Properties" type="MarginContainer"]
custom_minimum_size = Vector2(8.55, 11.53)
offset_right = 489.0
offset_bottom = 165.0
pivot_offset = Vector2(243, 81)
script = ExtResource("1_lwffo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 16.59)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="top_bar" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15.245)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/top_bar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/top_bar/PanelContainer"]
layout_mode = 2

[node name="properties_label" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/top_bar/PanelContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "- Properties"

[node name="cancel" type="Button" parent="PanelContainer/ScrollContainer/VBoxContainer/top_bar"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NameColumn" type="MarginContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Name" type="PanelContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/NameColumn"]
layout_mode = 2

[node name="PanelContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/NameColumn/Name"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer/NameColumn/Name/PanelContainer"]
layout_mode = 2
text = "Name"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer/NameColumn/Name/PanelContainer"]
layout_mode = 2

[node name="name_text" type="TextEdit" parent="PanelContainer/ScrollContainer/VBoxContainer/NameColumn/Name/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert Object Name"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer/VBoxContainer/CenterContainer2"]
layout_mode = 2

[node name="events" type="Button" parent="PanelContainer/ScrollContainer/VBoxContainer/CenterContainer2/CenterContainer"]
layout_mode = 2
text = "Events"

[node name="apply" type="Button" parent="PanelContainer/ScrollContainer/VBoxContainer/CenterContainer2/CenterContainer"]
layout_mode = 2
text = "Apply"

[node name="Panel" type="Panel" parent="PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="PanelContainer/ScrollContainer/VBoxContainer/top_bar/cancel" to="." method="queue_free"]
[connection signal="pressed" from="PanelContainer/ScrollContainer/VBoxContainer/CenterContainer2/CenterContainer/apply" to="." method="apply"]
